fixed form on mobile devices

--- a/style/style.scss
+++ b/style/style.scss
@@ -729,7 +729,7 @@ footer {
 }
 
 #donateForm {
-    width: 60%;
+    width: 70%;
     margin: auto;
     .form-group {
         display: flex;
@@ -759,10 +759,19 @@ footer {
 
 .success-message {
     background-color: #fcfcfc;
-    width: 60%;
+    width: 70%;
     margin: 10px auto;
     padding: 20px;
     text-align: center;
     font-size: 18px;
     color: green;
+}
+
+@media (max-width: 1050px){
+    #donateForm{
+        width: 100%;
+    }
+    .success-message{
+        width: 100%;
+    }
 }
